Edit index.js file

--- a/Public/index.html
+++ b/Public/index.html
@@ -10,13 +10,13 @@
     <div class="main">
         <h1>Drum-Kit</h1>
         <div class="drum-pads">
-            <button class="button a" id="btn1">Sound 1</button>
-            <button class="button s" id="btn2">Sound 2</button>
-            <button class="button d" id="btn3">Sound 3</button>
-            <button class="button f" id="btn4">Sound 4</button>
-            <button class="button j" id="btn5">Sound 5</button>
-            <button class="button k" id="btn6">Sound 6</button>
-            <button class="button l" id="btn7">Sound 7</button>
+            <button class="button a" id="btn1">A</button>
+            <button class="button s" id="btn2">S</button>
+            <button class="button d" id="btn3">D</button>
+            <button class="button f" id="btn4">F</button>
+            <button class="button j" id="btn5">J</button>
+            <button class="button k" id="btn6">K</button>
+            <button class="button l" id="btn7">L</button>
 
             <audio id="sound1" src="../Assets/Sounds/crash.mp3"></audio>
             <audio id="sound2" src="../Assets/Sounds/kick-bass.mp3"></audio>
